#6 - Bump to Java 11 and System.Logger